# zero2prod-deploy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml
configuration/: base.yaml  production.yaml
migrations/: 20210517154908_make_status_not_null_in_subscriptions.sql  20210517155100_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: #mod.rs#  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscriptions.rs  subscriptions_confirm.rs
