[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Peter C. Norton <spacey-github.com@ssr.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Using actix 2 because that's what's on their web site.
# but the book uses 2, but didn't really specify that up-front.
actix-web = "=4.0.0-beta.5"
actix-http = "=3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
serde = {version="1", features=["derive"]}
config = "0.11.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.19"
env_logger = "0.8.3"
log = "0.4.14"
tracing = {version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.4"
serde-aux = "2.2.0"
unicode-segmentation = "1.7.1"
validator = "0.13.0"
reqwest = {version="0.11", default-features = false, features=["json", "rustls-tls"]}
rand = {version = "0.8", features=["std_rng"]}

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
once_cell = "1.7.2"
tokio = { version = ">1.0", features = ["rt", "macros"] }
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1"
linkify = "0.5.0"
